--- a/styles/main.css
+++ b/styles/main.css
@@ -63,3 +63,14 @@ button {
 .subnotes {
     font: 0.75rem;
 }
+
+.home-button {
+    background-color: #0076B6;
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 20px;
+    margin: 10px 30px;
+    cursor: pointer;
+}
