--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,6 @@ body {
 
 h1 {
     font-size: 2.5rem;
-    color: white;
 }
 
 h2 {
@@ -71,10 +70,12 @@ button {
     text-align: center;
     display: inline-block;
     font-size: 20px;
-    margin: 10px 30px;
+    margin: 10px;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .header-link {
     text-decoration: none;
+    color: white;
 }
