--- a/styles/main.css
+++ b/styles/main.css
@@ -37,6 +37,10 @@ header img {
     float: right;
 }
 
+p {
+    font-size: 16px;
+}
+
 footer {
     font-size: smaller;
 }
@@ -60,7 +64,7 @@ button {
 }
 
 .subnotes {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .home-button {
