--- a/styles/main.css
+++ b/styles/main.css
@@ -38,16 +38,21 @@ footer {
     line-height: 80px;
 }
 
-main {
-    padding: 2opx;
+.notes-section {
+    padding: 20px;
     margin: 20px;
 }
-.home-img {
-  background-image: url('/img/computer1.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 
+.home-img {
+    width: 100%;
+    height: 1000px;
 }
+
+.hero-img {
+    display: flex;
+    flex-direction: row;
+}
+
 
 
 /* Week 1 */
@@ -79,7 +84,7 @@ button {
     text-align: center;
     display: inline-block;
     font-size: 20px;
-    margin: 10px;
+    margin: 10px 0;
     cursor: pointer;
     text-decoration: none;
 }
