--- a/styles/main.css
+++ b/styles/main.css
@@ -24,9 +24,21 @@ header, main, footer {
 }
 
 header, footer, footer a {
-    text-align: center;
     background-color: #808080;
     color: whitesmoke;
+}
+
+header {
+    border-bottom: 10px solid #333 ;
+}
+
+footer {
+    border-top: 10px solid #333 ;
+}
+
+header h1 {
+    padding: 10px;
+    margin: 20px;
 }
 
 p {
@@ -38,7 +50,12 @@ footer {
     line-height: 80px;
 }
 
-.notes-section {
+footer p {
+    font-size: 20px;
+    text-align: center;
+}
+
+.notes-section, .coding-section {
     padding: 20px;
     margin: 20px;
 }
@@ -49,10 +66,13 @@ footer {
 }
 
 .hero-img {
-    display: flex;
-    flex-direction: column;
+    width: 100%;
 }
 
+.column {
+    display: flex;
+    flex-direction: row;
+}
 
 
 /* Week 1 */
@@ -84,9 +104,15 @@ button {
     text-align: center;
     display: inline-block;
     font-size: 20px;
-    margin: 10px 0;
+    margin: 10px 40px 40px 40px;
     cursor: pointer;
     text-decoration: none;
+    transition: 0.7s;
+}
+
+.home-button:hover {
+    background-color: #333;
+    color: white;
 }
 
 .header-link {
