--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@ h2 {
     border-bottom: 1px solid #808080;
 }
 
-header, main, footer {
+header, footer {
     padding: 0.5rem;
 }
 
@@ -63,10 +63,6 @@ footer p {
 .home-img {
     width: 100%;
     height: 1000px;
-}
-
-.hero-img {
-    width: 100%;
 }
 
 .column {
