--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,39 @@
 /* WDD 330 Portfolio */
 
+@font-face {
+    font-family: 'aqua_grotesqueregular';
+    src: url('/font/aqua-webfont.woff2') format('woff2'),
+         url('/font/aqua-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('/font/roboto-regular-webfont.woff2') format('woff2'),
+         url('/font/roboto-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * { margin: 0; box-sizing: border-box; } 
 
 body { 
     font-size: 20px; 
     line-height: 32px;
-    font-family: 'Trebuchet MS', 'Helvetica', sans-serif;
     color: #333;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'aqua_grotesqueregular', Helvetica, sans-serif;
+}
+
 h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     text-align: left;
     border-bottom: 1px solid #808080;
 }
@@ -38,16 +57,18 @@ footer {
 
 header h1 {
     padding: 10px;
-    margin: 20px;
+    margin: 25px 20px 20px 20px;
+    font-stretch: condensed;
 }
 
 p {
     font-size: 16px;
+    font-family: 'robotoregular', Helvetica, sans-serif;
 }
 
 footer {
     height: 100px;
-    line-height: 80px;
+    line-height: 60px;
 }
 
 footer p {
@@ -62,7 +83,7 @@ footer p {
 
 .home-img {
     width: 100%;
-    height: 1000px;
+    height: 800px;
 }
 
 .column {
@@ -70,6 +91,48 @@ footer p {
     flex-direction: row;
 }
 
+.banner {
+    position: relative;
+    margin: 0;
+    height: 800px;
+}
+
+.home-content {
+    position: absolute;
+    top: 100px;
+    left: 40px;
+}
+
+.banner-title {
+    color: whitesmoke;
+    font-size: 45px;
+}
+
+ol#activity {
+    list-style: none;
+    margin: 20px 0;
+    padding: 0;
+}
+
+.home-content ol a {
+    text-decoration: none;
+    font-family: 'robotoregular', Helvetica, sans-serif;
+    color: whitesmoke;
+    padding: 20px;
+    font-size: 30px;
+}
+
+.home-content ol li {
+    background-color: #808080;
+    margin: 40px 0;
+    padding: 20px;
+    height: 80px;
+    transition: 0.7s;
+}
+
+.home-content ol li:hover {
+    background-color: #333;
+}
 
 /* Week 1 */
 
@@ -87,15 +150,19 @@ textarea {
 button {
     padding: 4px;
     margin: 4px;
+    font-family: 'robotoregular', Helvetica, sans-serif;
+    font-size: 16px;
 }
 
 .subnotes {
     font-size: 16px;
+    font-family: 'robotoregular', Helvetica, sans-serif;
 }
 
 .home-button {
     background-color: #808080;
     color: white;
+    font-family: 'robotoregular', Helvetica, sans-serif;
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
@@ -114,4 +181,5 @@ button {
 .header-link {
     text-decoration: none;
     color: white;
+    text-transform: uppercase;
 }
