--- a/styles/main.css
+++ b/styles/main.css
@@ -2,16 +2,16 @@
 
 @font-face {
     font-family: 'aqua_grotesqueregular';
-    src: url('/font/aqua-webfont.woff2') format('woff2'),
-         url('/font/aqua-webfont.woff') format('woff');
+    src: url('../font/aqua-webfont.woff2') format('woff2'),
+         url('../font/aqua-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'robotoregular';
-    src: url('/font/roboto-regular-webfont.woff2') format('woff2'),
-         url('/font/roboto-regular-webfont.woff') format('woff');
+    src: url('../font/roboto-regular-webfont.woff2') format('woff2'),
+         url('../font/roboto-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
