--- a/styles/tictac.css
+++ b/styles/tictac.css
@@ -1,13 +1,15 @@
 h1 {
     margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .player-notes {
     margin: 20px;
-    font-size: 30px; 
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif; 
 }
 
-table, th {
+/* table, th {
     border: 5px solid black;
 }
 
@@ -18,7 +20,99 @@ table {
     border-collapse: collapse;
 }
 
+th {
+    height: 150px;
+    width: 150px;
+    font-size: 100px;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 th:hover {
     background-color: #d3d3d3;
     opacity: 0.80;
+}
+
+th:nth-child(2) {
+    border-top: none;
+} */
+
+
+.board {
+    border: 3px solid black;
+    height: 150px;
+    width: 150px;
+    font-size: 100px;
+    margin: 0;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 150px;
+    transition: 0.5;
+}
+
+.board:hover {
+    background-color: yellow;
+    opacity: 0.3;
+}
+
+.tictac {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 33%;
+    margin: 20px;
+}
+
+.board:nth-child(1) {
+    border-left: none;
+    border-top: none;
+}
+
+
+.board:nth-child(2) {
+    border-top: none;
+}
+
+.board:nth-child(3) {
+    border-right: none;
+    border-top: none;
+}
+
+.board:nth-child(4) {
+    border-left: none;
+}
+
+.board:nth-child(6) {
+    border-right: none;
+}
+
+.board:nth-child(7) {
+    border-left: none;
+    border-bottom: none;
+}
+
+.board:nth-child(8) {
+    border-bottom: none;
+}
+
+.board:nth-child(9) {
+    border-right: none;
+    border-bottom: none;
+}
+
+button {
+    margin: 0 20px;
+    font-size: 20px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+    margin: 20px;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.hide-message {
+    display: none;
 }
