--- a/styles/main.css
+++ b/styles/main.css
@@ -81,6 +81,14 @@ footer p {
     margin: 20px;
 }
 
+.notes-section {
+    width: 800px;
+}
+
+.coding-section {
+    width: 500px;
+}
+
 .home-img {
     width: 100%;
     height: 800px;
@@ -183,4 +191,8 @@ button {
     text-decoration: none;
     color: white;
     text-transform: uppercase;
+}
+
+input {
+    font-family: 'robotoregular', Helvetica, sans-serif;
 }
