--- a/styles/tictac.css
+++ b/styles/tictac.css
@@ -1,4 +1,86 @@
+@font-face {
+    font-family: 'aqua_grotesqueregular';
+    src: url('../font/aqua-webfont.woff2') format('woff2'),
+         url('../font/aqua-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'robotoregular';
+    src: url('../font/roboto-regular-webfont.woff2') format('woff2'),
+         url('../font/roboto-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+* { margin: 0; box-sizing: border-box; } 
+
+body { 
+    font-size: 20px; 
+    line-height: 32px;
+    color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'aqua_grotesqueregular', Helvetica, sans-serif;
+}
+
 h1 {
+    font-size: 3rem;
+}
+
+h2 {
+    font-size: 1.7rem;
+    text-align: left;
+    border-bottom: 1px solid #808080;
+}
+
+header, footer {
+    padding: 0.5rem;
+}
+
+header, footer, footer a {
+    background-color: #808080;
+    color: whitesmoke;
+}
+
+header {
+    border-bottom: 10px solid #333 ;
+}
+
+footer {
+    border-top: 10px solid #333 ;
+}
+
+header h1 {
+    padding: 10px;
+    margin: 25px 20px 20px 20px;
+    font-stretch: condensed;
+}
+
+p {
+    font-size: 16px;
+    font-family: 'robotoregular', Helvetica, sans-serif;
+}
+
+footer {
+    height: 100px;
+    padding: 10px;
+}
+
+footer p {
+    font-size: 20px;
+    text-align: center;
+}
+
+.header-link {
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+}
+
+h2 {
     margin: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -59,7 +141,7 @@ th:nth-child(2) {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 33%;
+    width: 500px;
     margin: 20px;
 }
 
@@ -113,14 +195,33 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.hide-message {
-    display: none;
-}
-
 form {
     margin: 40px;
 }
 
 main h1 {
     margin: 40px;
+}
+
+
+
+/* MOBILE VIEW */
+
+@media only screen and (min-width:300px) and (max-width: 600px) {
+  
+    h1 {
+        font-size: 2rem;
+        text-align: center;
+    }
+
+    .tictac {
+        width: 500px;
+        margin: 10px;
+    }
+
+    .board { 
+        height: 120px;
+        width: 120px;
+    }
+    
 }
