--- a/styles/main.css
+++ b/styles/main.css
@@ -82,11 +82,11 @@ footer p {
 }
 
 .notes-section {
-    width: 800px;
+    max-width: 800px;
 }
 
 .coding-section {
-    width: 500px;
+    max-width: 500px;
 }
 
 .home-img {
@@ -137,6 +137,7 @@ ol li {
     height: 80px;
     transition: 0.7s;
     text-align: center;
+    max-width: 400px;
 }
 
 ol li:hover {
@@ -150,7 +151,7 @@ ol li:hover {
 }
 
 .columnB {
-    width: 500px;
+    max-width: 500px;
     margin-left: 20px;
     padding-left: 20px;
 }
@@ -163,7 +164,7 @@ h3 {
 
 textarea {
     padding: 10px 0;
-    width: 600px;
+    max-width: 600px;
     height: 250px;
     background-color: lightyellow;
 }
@@ -217,32 +218,33 @@ input {
         display: block;
     }
     h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-align: center;
     }
     .notes-section,.coding-section {
-        width: 550px;
+        max-width: 300px;
     }
 
     .columnA {
-        width: 450px;
+        max-width: 280px;
         margin-right: 0;
         padding-right: 0;
     }
     
     .columnB {
-        width: 450px;
+        max-width: 280px;
         margin-left: 0;
         padding-left: 0;
     } 
 
     .banner-title {
-        font-size: 35px;
+        font-size: 30px;
         text-align: center;
     }
     
     ol li {
         height: 70px;
+        max-width: 300px;
     }
 
     ol a {
