--- a/styles/todo.css
+++ b/styles/todo.css
@@ -105,7 +105,7 @@ h2 {
 
 form input {
     height: 50px;
-    width: 440px;
+    width: 450px;
     margin-bottom: 10px;
 }
 
@@ -113,6 +113,7 @@ form input {
     margin: 10px;
     height: 30px;
     width: 30px;
+    cursor: pointer;
 }
 
 .single-todo > button {
@@ -149,13 +150,28 @@ form input {
     line-height: 30px;
 }
 
-.task-button {
+#add-button {
     border: solid 1px black;
-    background: lightblue;
     width: 40px;
-    font-size: 25px;
-    height: 40px;
-    margin: 10px 0 0 10px;
+    font-size: 30px;
+    height: 50px;
+    text-align: center;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.done {
+    text-decoration: line-through;
+}
+
+.single-todo button {
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 
