--- a/styles/todo.css
+++ b/styles/todo.css
@@ -123,7 +123,7 @@ form input {
     font-size: 16px;
     height: 30px;
     padding: 5px;
-    margin: 15px 5px 10px 5px;
+    margin: 15px 10px 10px 5px;
     transition: 0.7s;
 }
 
@@ -159,6 +159,10 @@ form input {
     max-width: 500px;
     font-family: 'robotoregular', Helvetica, sans-serif;
     line-height: 30px;
+}
+
+#add-task {
+    padding: 10px;
 }
 
 #add-button {
