--- a/styles/todo.css
+++ b/styles/todo.css
@@ -233,7 +233,7 @@ main {
 @media only screen and (min-width:300px) and (max-width: 600px) {
   
     h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
         text-align: center;
     }
 
@@ -241,11 +241,34 @@ main {
         text-align: center;
         padding-left: 0;
         padding-right: 20px;
+        font-size: 2rem;
     }
-
 
     footer p {
         font-size: 16px;
+    }
+
+    .todo-app {
+        max-width: 500px;
+        margin: 30px;
+    }
+    
+    .all-task {
+        font-size: 16px;
+        margin: 5px;
+        padding: 5px;
+        font-weight: 1000;
+    }
+
+    .filter-button {
+        margin: 10px;
+        width: 70px;
+        height: 50px;
+        font-size: 12px;
+    }
+
+    .single-todo {
+        width: 420px;
     }
 
 }
