--- a/styles/week5.css
+++ b/styles/week5.css
@@ -1,52 +1,82 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-  Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+      Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      background-color: blanchedalmond;
   }
   img {
-  max-width: 90%;
-  padding-left: 20px;
+    max-width: 90%;
+    margin-left: 30px;
+  }
+  img, .info {
+    margin-bottom: 20px;
+    border: solid thin #4f4f4f;
+  }
+  h1, h2 {
+    text-align: center;
+    border: solid thin #4f4f4f;
+    font-family: "Dancing Script", fantasy;
+    font-weight: 700;
+    width: 100vw;
+  }
+  body, h1, ul {
+    padding: 0;
+    margin: 0;
   }
   h1 {
-  text-align: center;
-  width: 100vw;
-  background-color: rgb(252, 235, 159);
-  padding: 20px 0;
+      background-color: rgb(174, 252, 159);
+      font-size: 48px;
+      height: 12vh;
+      padding-top: 20px;
   }
   ul {
-  width: 100vw;
-  padding: 0;
+      width: 90vw;
   }
   li {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 10px;
-  list-style-type: none;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+      list-style-type: none;
   }
   h2 {
-  grid-column: 1/span 2;
-  text-align: center;
-  background-color: rgb(75, 93, 255);
-  opacity: 90%;
-  padding: 10px 0;
-  width: 100vw;
+      grid-column: 1/span 2;
+      background-color: rgb(138, 150, 255);
+      opacity: 90%;
+      padding: 10px 0;
+      font-size: 36px;
+      margin: 0 0 10px 0;
   }
   p {
-  width: 95%;
+      width: 40vw;
   }
-  button {
-  padding: 10px 20px;
-  background-color: firebrick;
-  color: white;
-  margin-left: 20px;
-  font-weight: 700;
+ button {
+    padding: 10px 20px;
+    background-color: firebrick;
+    color: white;
+    margin-left: 20px;
+    font-weight: 700;
   }
+  .info, .all-comments {
+    background-color: aliceblue;
+    padding: 10px;
+    margin-right: 30px;
+    border: 1px solid #4f4f4f;
+    width: 40vw;
+  }
+  #input-comment {
+    margin: 10px;
+  }
+  .comments, .all-comments {
+    margin: 10px 20px;
+  } 
   .hide {
       display: none;
   }
+  .all-comments {
+    width: 89vw;
+  }
 
-
+/* 
   textarea {
     margin: 20px;
     padding: 10px;
@@ -55,4 +85,6 @@ body {
 .single-comment, .all-comments h3, .comment-title  {
     padding: 0 10px;
     margin: 0 10px;;
-  }
+  } */
+
+  
