--- a/styles/week10.css
+++ b/styles/week10.css
@@ -206,8 +206,8 @@ button {
     text-transform: uppercase;
 }
 
-form {
-    margin: 20px 0;
+.week10-form {
+    margin: 20px 0 0 0;
     font-family: 'robotoregular', Helvetica, sans-serif;
     font-size: 18px;
     background-color: #333;
@@ -215,7 +215,7 @@ form {
     padding: 30px 20px;
 }
 
-form > button {
+.week10-form > button {
     padding: 10px;
     margin: 10px 0;
 }
@@ -224,11 +224,16 @@ form > button {
     margin: 10px 5px;
 }
 
-form span {
+.week10-form span {
     color: lightcoral;
     font-size: 14px;
     vertical-align: super;
     font-size: smaller;
+}
+
+.week10-form h4 {
+    text-transform: uppercase;
+    font-size: 22px;
 }
 
 .builtin input:invalid {
@@ -244,9 +249,23 @@ form span {
     color: lightcoral;
 }
 
-#registration {
-    color: whitesmoke;
+#registration, #subscription {
+    color: lightskyblue;
+    text-transform: uppercase;
+    font-size: 18px;
 }
+
+.thanks-heading {
+    font-size: 24px;
+    margin: 30px;
+}
+
+.thanks-subtext {
+    font-size: 18px;
+    margin: 30px;
+}
+
+
   
 /* MOBILE VIEW */
 
