--- a/pokedex/css/styles.css
+++ b/pokedex/css/styles.css
@@ -420,18 +420,23 @@ footer {
     }
   }
 
-  .home-button {
+.home-button {
     background-color: #808080;
     color: white;
     font-family: 'robotoregular', Helvetica, sans-serif;
-    padding: 5px 10px;
+    padding: 10px;
     text-align: center;
     display: inline-block;
     font-size: 20px;
     margin: 20px;
     cursor: pointer;
     text-decoration: none;
-    transition: 0.7s;
+    transition: 0.5s;
+}
+
+.home-button:hover {
+  background-color: #333;
+  color: white;
 }
 
 @media only screen and (min-width: 768px) {
